--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
     "next": "15.1.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
