--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-table": "^8.21.3",
+    "@types/leaflet": "^1.9.17",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
     "next": "15.1.7",
@@ -34,6 +37,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^5.0.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
