--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@copilotkit/react-core": "^1.8.6",
+    "@copilotkit/react-ui": "^1.8.6",
+    "@copilotkit/runtime": "1.8.6",
+    "@copilotkit/runtime-client-gql": "^1.8.6",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
