--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@copilotkit/react-ui": "^1.8.6",
     "@copilotkit/runtime": "1.8.6",
     "@copilotkit/runtime-client-gql": "^1.8.6",
+    "@number-flow/react": "^0.5.9",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
