--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@copilotkit/react-core": "^1.8.6",
-    "@copilotkit/react-ui": "^1.8.6",
-    "@copilotkit/runtime": "1.8.6",
-    "@copilotkit/runtime-client-gql": "^1.8.6",
+    "@ai-sdk/groq": "^1.2.8",
+    "@ai-sdk/openai": "^1.3.18",
+    "@ai-sdk/react": "^1.2.9",
     "@number-flow/react": "^0.5.9",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
@@ -28,6 +27,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/leaflet": "^1.9.17",
+    "ai": "^4.3.9",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,7 +49,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
-    "three-stdlib": "^2.35.15"
+    "three-stdlib": "^2.35.15",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^20",
