--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
